--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,14 +1,17 @@
+OpenWRT package for hfsprogs
+============================
+
 What is it?
-===========
+-----------
 
 This is a OpenWRT package for fsck.hfs / fsck.hfsplus
 
 How to use it?
-==============
+--------------
 
 - Download Attitude Adjustment SDK
-- Install all prerequisites for SDK
-- Put this package into `package` subdirectory
+- Install prerequisites for SDK
+- Copy this repository into `package` subdirectory
 - Issue `make package/hfsprogs/compile package/index` command
 - Grab built package from `bin/$arch/packages` directory
 
