Clarify build instructions

--- a/README.asciidoc
+++ b/README.asciidoc
@@ -12,6 +12,6 @@ How to use it?
 - Download Attitude Adjustment SDK
 - Install prerequisites for SDK
 - Copy this repository into `package` subdirectory
-- Issue `make package/hfsprogs/compile package/index` command
+- Issue `make package/hfsprogs/compile` command from the top of the SDK directory
 - Grab built package from `bin/$arch/packages` directory
 
